# PromptMux

./: .gitignore  LINUX_TROUBLESHOOTING.md  PLATFORM_DETECTION.md  QUICKSTART.md  README.md  check_output.txt  check_output_2.txt  convert-icons.ps1  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
docs/: Z_AI_SETUP.md
examples/: settings-anthropic.json  settings-ollama.json  settings-zai.json  settings.json
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  models.rs  state.rs
src/components/: DiagramModal.svelte  DiagramWorkspace.svelte  HelpModal.svelte  MainEditor.svelte  MergedOutput.svelte  ProjectSwitcher.svelte  RefineModal.svelte  SectionEditor.svelte  SettingsModal.svelte  Sidebar.svelte  Toolbar.svelte  TopicEditor.svelte
src/stores/: projectStore.ts
src/styles/: global.css
src/utils/: UndoHistory.ts  debounce.ts
